fix: overflow homepage

--- a/frontend/src/pages/homepage/Homepage.css
+++ b/frontend/src/pages/homepage/Homepage.css
@@ -11,7 +11,7 @@
 		background-color: var(--color-2);
 		display: flex;
 		justify-content: space-between;
-		background-image: url('./../../assets/imgs/bkg-home.webp');
+		background-image: url("./../../assets/imgs/bkg-home.webp");
 		background-repeat: no-repeat;
 		background-position: bottom left;
 		position: relative;
@@ -30,84 +30,74 @@
 				letter-spacing: 0.75px;
 			}
 		}
-
-		& #content-table {
+		& #body-room-list {
 			display: flex;
-			height: 100%;
-			flex-direction: column;
 			justify-content: center;
+			flex-direction: column;
+			width: 35%;
 			align-items: center;
-			gap: 1rem;
 
-			& table {
-				margin: 1rem;
-				padding: 1rem;
-				border-collapse: separate;
-				border-spacing: 0 1rem;
+			& #room-list {
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
 				background-color: var(--color-1-hover);
+				width: 100%;
+				height: 26rem;
+				margin-bottom: 3rem;
+				overflow-y: scroll;
 
-				& thead {
-					border-bottom: 2px solid var(--color-4);
-					& tr {
-
-						& th {
-							padding: 1rem 1rem 0.5rem;
-							color: var(--color-4);
-							font-family: var(--font-text);
-							text-transform: uppercase;
-						}
-					}
-				}
-
-				& tbody {
-					& tr {
-						color: var(--color-2);
-						border-radius: 1rem;
-						transition: .2s;
+			}
+			& #room-list-head {
+				display: flex;
+				padding: 1rem 1rem 0.5rem;
+				color: var(--color-4);
+				font-family: var(--font-text);
+				text-transform: uppercase;
+				width: 100%;
+				gap: 1rem;
+				border-bottom:  2px solid var(--color-4);
+				justify-content: space-around;
+			}
+			& #room-list-body{
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+				align-items: center;
+				padding: 1rem;
+				color: var(--color-2);
+			
+				& #room-item-body{
+					display: flex;
+					justify-content: space-between;
+					background-color: var(--color-5);
+					width: 100%;
+					height: 4rem;
+					border-radius: .5rem;
+					align-items: center;
+					padding: 0 1rem;
+					transition: .2s;
 
 						&:hover {
-							color: var(--color-1) !important;
-							background-color: var(--color-3);
+							background-color: var(--primary);
 						}
-
-						& td {
-							padding: 1rem;
-							text-align: center;
-							color: var(--color-2);
-							background-color: var(--color-5);
-
-
-							&:first-child {
-								border-radius: 1rem 0 0 1rem;
-							}
-
-							&:last-child {
-								border-radius: 0 1rem 1rem 0;
-							}
-
-							&.waiting {
-								color: #e4f17e;
-								font-weight: bold;
-							}
-
-							& button {
-								padding: 0.5rem 1rem;
-								text-transform: uppercase;
-								border-radius: 0.5rem;
-								border: 1px solid #e4f17e;
-								background-color: var(--color-1);
-								font-family: var(--font-text);
-								color: #e4f17e;
-							}
-
-							& svg {
-								width: 30px;
-							}
-						}
+						& button {
+						padding: 0.5rem 1rem;
+						text-transform: uppercase;
+						border-radius: 0.5rem;
+						border: 1px solid #e4f17e;
+						background-color: var(--color-1);
+						font-family: var(--font-text);
+						color: #e4f17e;
+						height: 2rem;
+					}
+		
+					& svg {
+						width: 30px;
+						margin: 0 1rem;
 					}
 				}
 			}
-
 			& button {
 				padding: 1rem 2rem;
 				border-radius: 8px;
@@ -124,6 +114,13 @@
 					background-color: var(--color-1-hover);
 				}
 			}
+		}			
 		}
 	}
+#blank{
+	margin: 0 1rem;
+}
+.waiting {
+	color: #e4f17e;
+	font-weight: bold;
 }
